# shiptracker

./: Cargo.toml  README.md
docs/: shipment_stats.txt
docs/data/: shipment_data.txt
src/: builder.rs  calc.rs  formatter.rs  lib.rs  main.rs  reader.rs  writer.rs
src/models/: input.rs  mod.rs  record.rs  transfer.rs
tests/: integration_tests.rs
tests/data/: test_data.csv  test_data.txt
