[package]
name = "shiptracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
regex = "1.6.0"
celes = "2.2.0"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
itertools = "0.10.3"
csv = "1.1.6"
expect-test = "1.4.0"
